--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
   "dependencies": {
     "cypress": "^13.7.0",
     "cypress-cucumber-preprocessor": "^4.3.1"
+  },
+  "devDependencies": {
+    "css-loader": "^6.10.0",
+    "sass": "^1.72.0",
+    "sass-loader": "^14.1.1",
+    "style-loader": "^3.3.4",
+    "webpack": "^5.91.0"
   }
 }
